# nwidget2

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml  test.yml  test_windows.yml
docs/: How-to-use.md  How-to-use_zh-cn.md
examples/: CMakeLists.txt
examples/Gallery/: CMakeLists.txt  gallery.cpp  gallery.h  main.cpp
examples/MCDayNightSwitchButton/: CMakeLists.txt  main.cpp  mcdaynightswitchbutton.cpp  mcdaynightswitchbutton.h
examples/basics/: CMakeLists.txt  main.cpp  mainwindow.cpp
include/nwidget/: behavior.h  binding.h  builder.h  builders.h  metaobject.h  metaobjects.h  utils.h
tests/: CMakeLists.txt  test_binding.cpp  test_builder.cpp  test_metaobj.cpp
tests/basics/: CMakeLists.txt  test_basics.cpp
